# qrcode-generator

./: CMakeLists.txt  Readme.md
src/: main.c
src/css/: style.css
